Run GUI manager test on Windows